--- a/Proyecto curso/main.html
+++ b/Proyecto curso/main.html
@@ -11,8 +11,8 @@
 <body>
   <aside>
     <div class="user">
-      <img src="images/user.png" alt="user">
-      <p>Nombre de usuario</p>
+      <span class="user-template"></span>
+      <p>Usuario</p>
     </div>
     <div class="aside-item"></div>
     <div class="aside-item"></div>
@@ -22,61 +22,65 @@
     <div class="upgrade-button"></div>
     <div class="settings"></div>
   </aside>
-  <header>
-    <nav>
+  <div class="content">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="main.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <a href="./main.html"><h1 id="page-title">MindWell</h1></a>
+    </header>
+    <div style="height: 80vh;"></div>
+    <main>
+      <section class="user-main-info">
+
+      </section>
+
+      <section class="catalog-guides">
+        <div class="catalog-items">
+
+        </div>
+        <div class="catalog-items">
+
+        </div>
+        <div class="catalog-items">
+
+        </div>
+      </section>
+
+      <section class="carousel">
+
+      </section>
+    </main>
+    <footer>
+      <div class="footer-columns">
+      <h3>Contact</h3>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="main.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a></li>
+        <li><a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a></li>
+        <li><a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a></li>
+        <li><a href="https://www.tiktok.com/"><img src="images/tiktok.png" alt="TikTok"></a></li>
       </ul>
-      <h1 id="page-title">MindWell</h1>
-    </nav>
-  </header>
-  <main>
-    <section class="user-main-info">
-
-    </section>
-
-    <section class="catalog-guides">
-      <div class="catalog-items">
-
+      <div class="email-contact">
+        <p>Stay updated on everything MindWell</p>
+        <form action="">
+          <input type="email" name="email" id="email" placeholder="Your email here">
+          <input type="submit" value="Subscribe" id="submit" />
+        </form>
       </div>
-      <div class="catalog-items">
-
-      </div>
-      <div class="catalog-items">
-
-      </div>
-    </section>
-
-    <section class="carousel">
-
-    </section>
-  </main>
-  <footer>
-    <h2>MindWell</h2>
-    <h3>Contact</h3>
-    <ul>
-      <li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook"></a></li>
-      <li><a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram"></a></li>
-      <li><a href="https://www.twitter.com/"><img src="images/twitter.png" alt="Twitter"></a></li>
-      <li><a href="https://www.tiktok.com/"><img src="images/tiktok.png" alt="TikTok"></a></li>
-    </ul>
-    <div class="email-contact">
-      <p>Stay updated on everything MindWell</p>
-      <form action="">
-        <input type="email" name="email" id="email" placeholder="Your email here">
-        <input type="submit" value="Subscribe" id="submit" />
-      </form>
+      <ul>
+        <li><a href="about.html">Privacy Policy</a></li>
+        <li><a href="about.html">Terms & Conditions</a></li>
+        <li><a href="about.html">Cookie Consent</a></li>
+        <li><a href="about.html">Accessibility</a></li>
+      </ul>
     </div>
-    <ul>
-      <li><a href="about.html">Privacy Policy</a></li>
-      <li><a href="about.html">Terms & Conditions</a></li>
-      <li><a href="about.html">Cookie Consent</a></li>
-      <li><a href="about.html">Accessibility</a></li>
-    </ul>
-    <p>©2023 MindWell, All Rights Reserved </p>
-  </footer>
+      <p>©2023 MindWell, All Rights Reserved </p>
+    </footer>
+  </div>
 </body>
 
 </html>
