--- a/ProyectoDOR/subpages/user-profile-edit.html
+++ b/ProyectoDOR/subpages/user-profile-edit.html
@@ -6,7 +6,11 @@
     <title>Edit profile</title>
     <link rel="stylesheet" href="../styles/layout.css" />
     <link rel="stylesheet" href="../styles/user-profile-styles.css" />
-    <script src="../scripts/mainPage.js"></script>
+    <script src="../scripts/mainPage.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/4071e215e7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <aside class="aside">
@@ -63,23 +67,47 @@
           <div class="user-info">
             <div>
               <label class="label" for="name">Name</label>
-              <input type="text" name="name" id="name" />
+              <input
+                type="text"
+                name="name"
+                id="name"
+                required
+                pattern="^([A-ZÀ-ÿ][a-zÀ-ÿ.,' -]*)$"
+                placeholder="John"
+                maxlength="60"
+              />
             </div>
             <div>
               <label class="label" for="surname">Surname</label>
-              <input type="text" name="surname" id="surname" />
+              <input
+                type="text"
+                name="surname"
+                id="surname"
+                required
+                placeholder="Doe"
+                pattern="^([A-ZÀ-ÿ][a-zÀ-ÿ.,' -]*)$"
+                maxlength="60"
+              />
             </div>
             <div>
               <label class="label" for="email">Email</label>
-              <input type="email" name="email" id="email" />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                required
+                placeholder="johndoe@example.com"
+                pattern="[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}"
+              />
             </div>
             <div>
               <label class="label" for="birthday">Birthday</label>
-              <input type="date" name="birthday" id="birthday" />
+              <input type="date" name="birthday" required id="birthday" />
             </div>
             <div>
               <label class="label" for="gender">Gender</label>
-              <select name="gender" id="gender">
+              <select name="gender" id="gender" required>
+                <option value="" disabled selected></option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="non-binary">Non-binary</option>
@@ -88,15 +116,34 @@
             </div>
             <div>
               <label class="label" for="phone">Phone number</label>
-              <input type="tel" name="phone" id="phone" />
+              <input
+                type="tel"
+                name="phone"
+                id="phone"
+                required
+                placeholder="600 123 456"
+                pattern="^[6-7]\d{2}([ ]?\d{3}){2}|[8-9][1-9]\d{1}([ ]?\d{3}){2}$"
+              />
             </div>
             <div>
               <label class="label" for="email">Country</label>
-              <input list="countries" name="country" id="country" />
+              <input
+                list="countries"
+                name="country"
+                id="country"
+                required
+                placeholder="Spain"
+              />
             </div>
             <div>
               <label class="label" for="address">Address</label>
-              <input type="text" name="address" id="address" />
+              <input
+                type="text"
+                name="address"
+                id="address"
+                required
+                placeholder="Calle Falsa 123"
+              />
             </div>
           </div>
         </form>
@@ -110,24 +157,24 @@
           <h3>Contact</h3>
           <ul>
             <li>
-              <a href="https://www.facebook.com/"
-                ><img src="images/facebook.png" alt="Facebook"
-              /></a>
+              <a href="https://www.facebook.com/">
+                <i class="fa-brands fa-facebook"></i> Facebook
+              </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/"
-                ><img src="images/instagram.png" alt="Instagram"
-              /></a>
+              <a href="https://www.twitter.com/">
+                <i class="fa-brands fa-twitter"></i> Instagram
+              </a>
             </li>
             <li>
-              <a href="https://www.twitter.com/"
-                ><img src="images/twitter.png" alt="Twitter"
-              /></a>
+              <a href="https://www.instagram.com/">
+                <i class="fa-brands fa-instagram"></i> Twitter
+              </a>
             </li>
             <li>
-              <a href="https://www.tiktok.com/"
-                ><img src="images/tiktok.png" alt="TikTok"
-              /></a>
+              <a href="https://www.tiktok.com/">
+                <i class="fa-brands fa-tiktok"></i> TikTok
+              </a>
             </li>
           </ul>
           <div class="email-contact">
@@ -142,7 +189,7 @@
               <input type="submit" value="Subscribe" id="submit" />
             </form>
           </div>
-          <ul>
+          <ul class="footer-info-links">
             <li><a href="about.html">Privacy Policy</a></li>
             <li><a href="about.html">Terms & Conditions</a></li>
             <li><a href="about.html">Cookie Consent</a></li>
