--- a/ProyectoDOR/subpages/user-profile.html
+++ b/ProyectoDOR/subpages/user-profile.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../styles/layout.css" />
     <link rel="stylesheet" href="../styles/user-profile-styles.css" />
     <script src="../scripts/mainPage.js"></script>
+    <script
+      src="https://kit.fontawesome.com/4071e215e7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <aside class="aside">
