--- a/ProyectoDOR/subpages/user-profile-edit.html
+++ b/ProyectoDOR/subpages/user-profile-edit.html
@@ -122,8 +122,7 @@
                 id="phone"
                 required
                 placeholder="600 123 456"
-                pattern="^[6-7]\d{2}([ ]?\d{3}){2}|[8-9][1-9]\d{1}([ ]?\d{3}){2}$"
-              />
+                pattern="^(?!7[5-9]|8[09]|9[09])[789]([- \.]*\d){8}$"/>
             </div>
             <div>
               <label class="label" for="email">Country</label>
