Finished overall responsiveness, progress bar

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -35,7 +35,7 @@
         <h2>Resources</h2>
         <div class="submenu-arrow"></div>
       </a>
-      <div class="upgrade-button"></div>
+      <a href="#"><div class="upgrade-button">Upgrade</div></a>
       <!-- WIP -->
       <div class="settings"></div>
       <!-- WIP -->
@@ -62,16 +62,63 @@
         ></a>
       </header>
       <main>
-        <h2>Welcome</h2>
+        <h2>👋 Welcome back, this is your progress</h2>
 
         <section class="user-info box-template">
           <img src="./media/user-avatar.png" alt="User Avatar" />
           <div class="user-text">
-            <h3>Username</h3>
-            <p>Basic</p>
+            <h3>Hey, User</h3>
+            <p>Essential Support</p>
             <div class="user-buttons">
               <button class="btn btn-primary">Progress</button>
               <button class="btn btn-secondary">Chat</button>
+            </div>
+          </div>
+
+          <div class="next-steps">
+            <a href="#">
+              <div>
+                <h4>Resource 1</h4>
+                <p>This is your first step</p>
+              </div>
+            </a>
+            <a href="#">
+              <div>
+                <h4>Resource 2</h4>
+                <p>This is your second step</p>
+              </div>
+            </a>
+            <a href="#">
+              <div>
+                <h4>Resource 3</h4>
+                <p>This is your second third step</p>
+              </div>
+            </a>
+          </div>
+          <h2>
+            This is your moment of change. <br /><br />Here are your next steps:
+          </h2>
+          <div class="user-progress">
+            <div class="progress-bar">
+              <h3>Title 1</h3>
+              <div class="progress">
+                <div class="progress-bar-fill" style="width: 50%"></div>
+              </div>
+              <p>50%</p>
+            </div>
+            <div class="progress-bar">
+              <h3>Title 2</h3>
+              <div class="progress">
+                <div class="progress-bar-fill" style="width: 75%"></div>
+              </div>
+              <p>75%</p>
+            </div>
+            <div class="progress-bar">
+              <h3>Title 3</h3>
+              <div class="progress">
+                <div class="progress-bar-fill" style="width: 25%"></div>
+              </div>
+              <p>25%</p>
             </div>
           </div>
         </section>
@@ -82,12 +129,28 @@
           <div class="catalog-items box-template">
             <h3>Stress</h3>
             <p class="price price-sale">0.95€</p>
-            <img class="sale-icon" src="./media/sale-icon.png" alt="" />
+            <img class="sale-icon " src="./media/sale-icon.png" alt="">
           </div>
           <div class="catalog-items box-template">
             <h3>Sleep</h3>
             <p class="price price-sale">0.95€</p>
-            <img class="sale-icon" src="./media/sale-icon.png" alt="" />
+            <img class="sale-icon " src="./media/sale-icon.png" alt="">
+          </div>
+          <div class="catalog-items box-template">
+            <h3>Mindfulness</h3>
+            <p class="price">2.99€</p>
+          </div>
+          <div class="catalog-items box-template">
+            <h3>Relationships</h3>
+            <p class="price">2.99€</p>
+          </div>
+          <div class="catalog-items box-template">
+            <h3>Stress</h3>
+            <p class="price">2.95€</p>
+          </div>
+          <div class="catalog-items box-template">
+            <h3>Sleep</h3>
+            <p class="price">2.99€</p>
           </div>
           <div class="catalog-items box-template">
             <h3>Mindfulness</h3>
