last changes pushed

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -16,7 +16,7 @@
   <body>
     <aside class="aside">
       <div class="user">
-        <span class="user-template"></span>
+        <a href="./subpages/user-profile.html"><span class="user-template"></span></a>
         <p>Usuario</p>
       </div>
       <a href="#" class="aside-item">
@@ -36,6 +36,7 @@
         <div class="submenu-arrow"></div>
       </a>
       <a href="#"><div class="upgrade-button">Upgrade</div></a>
+
       <!-- WIP -->
       <div class="settings"></div>
       <!-- WIP -->
@@ -49,9 +50,9 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="main.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./main.html">Home</a></li>
+            <li><a href="./main.html">About</a></li>
+            <li><a href="./main.html">Contact</a></li>
           </ul>
         </nav>
         <a href="./main.html">
