--- a/ProyectoDOR/subpages/user-profile.html
+++ b/ProyectoDOR/subpages/user-profile.html
@@ -13,31 +13,6 @@
     ></script>
   </head>
   <body>
-    <aside class="aside">
-      <div class="user">
-        <span class="user-template"></span>
-        <p>Usuario</p>
-      </div>
-      <div class="aside-item">
-        <h2>Meditate</h2>
-        <div class="submenu-arrow"></div>
-      </div>
-      <div class="aside-item">
-        <h2>Guides</h2>
-        <div class="submenu-arrow"></div>
-      </div>
-      <div class="aside-item">
-        <h2>Chat</h2>
-        <div class="submenu-arrow"></div>
-      </div>
-      <div class="aside-item">
-        <h2>Resources</h2>
-        <div class="submenu-arrow"></div>
-      </div>
-      <div class="upgrade-button"></div>
-      <div class="settings"></div>
-    </aside>
-
     <div class="content">
       <header>
         <div class="hamburger-toggle">
@@ -47,15 +22,17 @@
         </div>
         <nav>
           <ul>
-            <li><a href="../main.html">Home</a></li>
-            <li><a href="../main.html">About</a></li>
-            <li><a href="../main.html">Contact</a></li>
+            <li><a href="./main.html">Home</a></li>
+            <li><a href="./main.html">About</a></li>
+            <li><a href="./main.html">Contact</a></li>
           </ul>
         </nav>
-        <a href="../main.html">
+        <a href="./main.html">
           <h1 id="page-title">MindWell</h1>
         </a>
-        <span class="user-template"></span>
+        <a href="./subpages/user-profile.html"
+          ><span class="user-template"></span
+        ></a>
       </header>
 
       <main class="profile-info">
