Desarrollo de reponsividiad en paginas de perfil

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -58,7 +58,7 @@
         <a href="./main.html">
           <h1 id="page-title">MindWell</h1>
         </a>
-        <a href="./subpages/user-profile.html"
+        <a class="header-avatar-link" href="./subpages/user-profile.html"
           ><span class="user-template"></span
         ></a>
       </header>
