Small changes, typos and comments

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -126,6 +126,7 @@
 
         <h2>Guide packages</h2>
 
+        <!-- hacer divs en section articles -->
         <section class="catalog-guides">
           <div class="catalog-items box-template">
             <h3>Stress</h3>
