--- a/ProyectoDOR/subpages/user-profile.html
+++ b/ProyectoDOR/subpages/user-profile.html
@@ -87,24 +87,24 @@
           <h3>Contact</h3>
           <ul>
             <li>
-              <a href="https://www.facebook.com/"
-                ><img src="images/facebook.png" alt="Facebook"
-              /></a>
+              <a href="https://www.facebook.com/">
+                <i class="fa-brands fa-facebook"></i> Facebook
+              </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/"
-                ><img src="images/instagram.png" alt="Instagram"
-              /></a>
+              <a href="https://www.twitter.com/">
+                <i class="fa-brands fa-twitter"></i> Instagram
+              </a>
             </li>
             <li>
-              <a href="https://www.twitter.com/"
-                ><img src="images/twitter.png" alt="Twitter"
-              /></a>
+              <a href="https://www.instagram.com/">
+                <i class="fa-brands fa-instagram"></i> Twitter
+              </a>
             </li>
             <li>
-              <a href="https://www.tiktok.com/"
-                ><img src="images/tiktok.png" alt="TikTok"
-              /></a>
+              <a href="https://www.tiktok.com/">
+                <i class="fa-brands fa-tiktok"></i> TikTok
+              </a>
             </li>
           </ul>
           <div class="email-contact">
@@ -119,7 +119,7 @@
               <input type="submit" value="Subscribe" id="submit" />
             </form>
           </div>
-          <ul>
+          <ul class="footer-info-links">
             <li><a href="about.html">Privacy Policy</a></li>
             <li><a href="about.html">Terms & Conditions</a></li>
             <li><a href="about.html">Cookie Consent</a></li>
