Varying font options

--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -6,6 +6,13 @@
     <title>Home - MindWell</title>
     <link rel="stylesheet" href="styles/layout.css" />
     <link rel="stylesheet" href="styles/layout-responsive.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="./scripts/mainPage.js"></script>
     <script
       src="https://kit.fontawesome.com/4071e215e7.js"
@@ -16,7 +23,9 @@
   <body>
     <aside class="aside">
       <div class="user">
-        <a href="./subpages/user-profile.html"><span class="user-template"></span></a>
+        <a href="./subpages/user-profile.html"
+          ><span class="user-template"></span
+        ></a>
         <p>Usuario</p>
       </div>
       <a href="#" class="aside-item">
@@ -131,12 +140,12 @@
           <div class="catalog-items box-template">
             <h3>Stress</h3>
             <p class="price price-sale">0.95€</p>
-            <img class="sale-icon " src="./media/sale-icon.png" alt="">
+            <img class="sale-icon" src="./media/sale-icon.png" alt="" />
           </div>
           <div class="catalog-items box-template">
             <h3>Sleep</h3>
             <p class="price price-sale">0.95€</p>
-            <img class="sale-icon " src="./media/sale-icon.png" alt="">
+            <img class="sale-icon" src="./media/sale-icon.png" alt="" />
           </div>
           <div class="catalog-items box-template">
             <h3>Mindfulness</h3>
