--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - MindWell</title>
     <link rel="stylesheet" href="styles/layout.css" />
+    <!-- <link rel="stylesheet" href="styles/layout-dark-mode.css" /> -->
     <link rel="stylesheet" href="styles/layout-responsive.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
