--- a/ProyectoDOR/main.html
+++ b/ProyectoDOR/main.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - MindWell</title>
-    <link rel="stylesheet" href="styles/layout.css" />
-    <!-- <link rel="stylesheet" href="styles/layout-dark-mode.css" /> -->
-    <link rel="stylesheet" href="styles/layout-responsive.css" />
+    <!-- <link rel="stylesheet" href="styles/layout.css" /> -->
+    <!-- <link rel="stylesheet" href="styles/layout-responsive.css" /> -->
+    <link rel="stylesheet" href="styles/layout-dark.css" />
+    <link rel="stylesheet" href="styles/layout-responsive-dark.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
