Started product page, small responsiveness changes

--- a/ProyectoDOR/subpages/product.html
+++ b/ProyectoDOR/subpages/product.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile</title>
+    <title>Product</title>
+
     <link rel="stylesheet" href="../styles/light mode/layout.css" />
     <link rel="stylesheet" href="../styles/light mode/layout-responsive.css" />
-  
+
     <!-- <link rel="stylesheet" href="../styles/dark mode/layout-dark.css" />
-    <link rel="stylesheet" href="../styles/dark mode/layout-responsive-dark.css">> -->
+  <link rel="stylesheet" href="../styles/dark mode/layout-responsive-dark.css">> -->
 
-    <link rel="stylesheet" href="../styles/user-profile-styles.css" />
+    <link rel="stylesheet" href="../styles/product.css" />
 
-    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,52 +44,10 @@
           ><span class="user-template"></span
         ></a>
       </header>
-      <div class="show-user-info">
-        <main class="profile-info">
-          <div class="profile-picture">
-            <img src="../media/user-avatar.png" alt="your profile picture" />
-          </div>
 
-          <div class="profile-user-info">
-            <div>
-              <span class="label">Name</span>
-              <span class="value">John</span>
-            </div>
-            <div>
-              <span class="label">Surname</span>
-              <span class="value">Doe</span>
-            </div>
-            <div>
-              <span class="label">Email</span>
-              <span class="value">johndoe&#64;example.com</span>
-            </div>
-            <div>
-              <span class="label">Birthday</span>
-              <span class="value">April 5th, 2002</span>
-            </div>
-            <div>
-              <span class="label">Gender</span>
-              <span class="value">Male</span>
-            </div>
-            <div>
-              <span class="label">Phone Number</span>
-              <span class="value">600 123 456</span>
-            </div>
-
-            <div>
-              <span class="label">Country</span>
-              <span class="value">Spain</span>
-            </div>
-            <div>
-              <span class="label">Address</span>
-              <span class="value">Calle Falsa 123</span>
-            </div>
-          </div>
-          <a href="user-profile-edit.html">
-            <input type="button" value="Edit profile" />
-          </a>
-        </main>
-      </div>
+      <main>
+        
+      </main>
 
       <footer>
         <div class="footer-rows">
