--- a/ProyectoDOR/subpages/user-profile-edit.html
+++ b/ProyectoDOR/subpages/user-profile-edit.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit profile</title>
-    <link rel="stylesheet" href="../styles/layout.css" />
+    <link rel="stylesheet" href="../styles/light mode/layout.css" />
+    <link rel="stylesheet" href="../styles/light mode/layout-responsive.css" />
+  
+    <!-- <link rel="stylesheet" href="../styles/dark mode/layout-dark.css" />
+    <link rel="stylesheet" href="../styles/dark mode/layout-responsive-dark.css">> -->
+
     <link rel="stylesheet" href="../styles/user-profile-styles.css" />
-    <link rel="stylesheet" href="../styles/layout-responsive.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="../scripts/mainPage.js" defer></script>
-    <script
-      src="https://kit.fontawesome.com/4071e215e7.js"
-      crossorigin="anonymous"
-    ></script>
+
   </head>
   <body>
     <div class="content">
